--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 
 /* Import legal document styles */
 @import './legal-components.css';
+@import './markdown.css';
 
 /* Custom CSS variables */
 :root {
